# svm

./: CMakeLists.txt  CMakeSettings.json
include/svm/: dataset.hpp  model.hpp
include/svm/detail/: patch_through_problem.hpp  precompute_kernel_problem.hpp
include/svm/kernel/: polynomial.hpp
test/: label_classifier_stability.cpp  poly_introspect.cpp  problem.cpp
